fix: prevent overscroll on mobile toc

--- a/packages/starlight/components/MobileTableOfContents.astro
+++ b/packages/starlight/components/MobileTableOfContents.astro
@@ -105,6 +105,7 @@ const t = useTranslations(locale);
 		overflow-y: auto;
 		background-color: var(--sl-color-black);
 		box-shadow: var(--sl-shadow-md);
+		overscroll-behavior: contain;
 	}
 </style>
 
