--- a/packages/starlight/components/Hero.astro
+++ b/packages/starlight/components/Hero.astro
@@ -32,29 +32,15 @@ if (image) {
 
 <div class="hero">
 	{
-		darkImage &&
-			(darkImage.format === 'svg' ? (
-				<img
-					src={darkImage.src}
-					{...imageAttrs}
-					class:list={{ 'light:sl-hidden': Boolean(lightImage) }}
-				/>
-			) : (
-				<Image
-					src={darkImage}
-					{...imageAttrs}
-					class:list={{ 'light:sl-hidden': Boolean(lightImage) }}
-				/>
-			))
+		darkImage && (
+			<Image
+				src={darkImage}
+				{...imageAttrs}
+				class:list={{ 'light:sl-hidden': Boolean(lightImage) }}
+			/>
+		)
 	}
-	{
-		lightImage &&
-			(lightImage.format === 'svg' ? (
-				<img src={lightImage.src} {...imageAttrs} class="dark:sl-hidden" />
-			) : (
-				<Image src={lightImage} {...imageAttrs} class="dark:sl-hidden" />
-			))
-	}
+	{lightImage && <Image src={lightImage} {...imageAttrs} class="dark:sl-hidden" />}
 	{rawHtml && <div class="hero-html sl-flex" set:html={rawHtml} />}
 	<div class="sl-flex stack">
 		<div class="sl-flex copy">
