--- a/packages/starlight/components/MobileMenuFooter.astro
+++ b/packages/starlight/components/MobileMenuFooter.astro
@@ -13,12 +13,18 @@ import type { Props } from '../props';
 
 <style>
 	.social-icons {
+		margin-inline-end: auto;
 		gap: 1rem;
 		align-items: center;
 	}
+	.social-icons:empty {
+		display: none;
+	}
 	.mobile-preferences {
 		justify-content: space-between;
+		flex-wrap: wrap;
 		border-top: 1px solid var(--sl-color-gray-6);
+		column-gap: 1rem;
 		padding: 0.5rem 0;
 	}
 </style>
