add react-awesome-reveal website to showcase

--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -65,4 +65,9 @@ import FluidGrid from './fluid-grid.astro';
 		thumbnail="ai-prompt-snippets.png"
 	/>
 	<Card title="Folks Router" href="https://folksrouter.io/" thumbnail="folksrouter.io.png" />
+	<Card
+		title="React Awesome Reveal"
+		href="https://react-awesome-reveal.morello.dev/"
+		thumbnail="react-awesome-reveal.morello.dev.png"
+	/>
 </FluidGrid>
