--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -85,8 +85,8 @@ interface Props {
 		align-items: center;
 		justify-content: space-between;
 		padding-inline: var(--sl-sidebar-item-padding-inline);
-		padding-block-end: 0.3em;
-		line-height: 1.5;
+		padding-block: 0.2em;
+		line-height: 1.4;
 		cursor: pointer;
 		user-select: none;
 	}
