--- a/packages/starlight/components/MobileMenuFooter.astro
+++ b/packages/starlight/components/MobileMenuFooter.astro
@@ -16,6 +16,7 @@ import type { Props } from '../props';
 		margin-inline-end: auto;
 		gap: 1rem;
 		align-items: center;
+		padding-block: 1rem;
 	}
 	.social-icons:empty {
 		display: none;
