chore: fix demo color contrast

--- a/packages/starlight-search-demo/overrides/Search.astro
+++ b/packages/starlight-search-demo/overrides/Search.astro
@@ -11,13 +11,13 @@ import config from 'virtual:starlight-search-demo-config';
 
 <style>
 	input {
-		background-color: crimson;
-		border: 2px solid darkred;
-		color: floralwhite;
+		background-color: oklch(46.47% 0.183 13.2);
+		border: 2px solid oklch(38.24% 0.165 13.2);
+		color: oklch(100% 0 0);
 		width: 100%;
 	}
 
 	input::placeholder {
-		color: salmon;
+		color: oklch(85.29% 0.052 13.2);
 	}
 </style>
