--- a/packages/starlight-search-demo/overrides/Search.astro
+++ b/packages/starlight-search-demo/overrides/Search.astro
@@ -1,15 +1,24 @@
 ---
 import config from 'virtual:starlight-search-demo-config';
+import { Button } from '../components/Button';
 ---
 
-<input
-	autocapitalize="none"
-	enterkeyhint="search"
-	placeholder={`Search Demo with API Key '${config.apiKey}'`}
-	type="text"
-/>
+<form>
+	<input
+		autocapitalize="none"
+		enterkeyhint="search"
+		placeholder={`Search Demo with API Key '${config.apiKey}'`}
+		type="text"
+	/>
+	<Button client:load />
+</form>
 
 <style>
+	form {
+		display: flex;
+		width: 100%;
+	}
+
 	input {
 		background-color: oklch(46.47% 0.183 13.2);
 		border: 2px solid oklch(38.24% 0.165 13.2);
