--- a/packages/starlight/components/SiteTitle.astro
+++ b/packages/starlight/components/SiteTitle.astro
@@ -2,9 +2,9 @@
 import { logos } from 'virtual:starlight/user-images';
 import config from 'virtual:starlight/user-config';
 import type { Props } from '../props';
-import { formatPathFromConfig } from '../utils/navigation';
+import { formatPath } from '../utils/format-path';
 
-const href = formatPathFromConfig(Astro.props.locale || '/');
+const href = formatPath(Astro.props.locale || '/');
 ---
 
 <a {href} class="site-title sl-flex">
