fix: ignore search shortcuts for element with contents that are editable

--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -89,8 +89,9 @@ const pagefindTranslations = {
 			// Listen for `/` and `cmd + k` keyboard shortcuts.
 			window.addEventListener('keydown', (e) => {
 				const isInput =
-					document.activeElement &&
-					['input', 'select', 'textarea'].includes(document.activeElement.tagName.toLowerCase());
+					document.activeElement instanceof HTMLElement &&
+					(['input', 'select', 'textarea'].includes(document.activeElement.tagName.toLowerCase()) ||
+						document.activeElement.isContentEditable);
 				if (e.metaKey === true && e.key === 'k') {
 					dialog.open ? closeModal() : openModal();
 					e.preventDefault();
