add EFP site to the right showcase file

--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -70,4 +70,9 @@ import FluidGrid from './fluid-grid.astro';
 		href="https://react-awesome-reveal.morello.dev/"
 		thumbnail="react-awesome-reveal.morello.dev.png"
 	/>
+	<Card
+		title="Ethereum Follow Protocol"
+		href="https://docs.ethfollow.xyz/"
+		thumbnail="docs.ethfollow.xyz.png"
+	/>
 </FluidGrid>
