fix(Testimonials): fix padding

--- a/docs/src/components/testimonial-grid.astro
+++ b/docs/src/components/testimonial-grid.astro
@@ -30,6 +30,7 @@ const { title } = Astro.props;
 		list-style: none;
 		display: grid;
 		gap: 1rem;
+		padding-left: 0;
 	}
 
 	.testimonial-grid > :global(*) {
