--- a/packages/docsearch/DocSearch.astro
+++ b/packages/docsearch/DocSearch.astro
@@ -1,6 +1,6 @@
 ---
 import type { Props } from '@astrojs/starlight/props';
-import '@docsearch/css/dist/_variables.css';
+import './variables.css';
 import '@docsearch/css/dist/modal.css';
 
 // TODO: Actually load translations
