--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -75,4 +75,5 @@ import FluidGrid from './fluid-grid.astro';
 		href="https://docs.ethfollow.xyz/"
 		thumbnail="docs.ethfollow.xyz.png"
 	/>
+	<Card title="Knip" href="https://knip.dev" thumbnail="knip.dev.png" />
 </FluidGrid>
