Fix timezone-reliance in LastUpdated

--- a/packages/starlight/components/LastUpdated.astro
+++ b/packages/starlight/components/LastUpdated.astro
@@ -9,7 +9,7 @@ const { labels, lang, lastUpdated } = Astro.props;
 		<p>
 			{labels['page.lastUpdated']}{' '}
 			<time datetime={lastUpdated.toISOString()}>
-				{lastUpdated.toLocaleDateString(lang, { dateStyle: 'medium' })}
+				{lastUpdated.toLocaleDateString(lang, { dateStyle: 'medium', timeZone: 'UTC' })}
 			</time>
 		</p>
 	)
