--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -76,4 +76,5 @@ import FluidGrid from './fluid-grid.astro';
 		thumbnail="docs.ethfollow.xyz.png"
 	/>
 	<Card title="Knip" href="https://knip.dev" thumbnail="knip.dev.png" />
+	<Card title="secco" href="https://secco.lekoarts.de" thumbnail="secco.lekoarts.de.png" />
 </FluidGrid>
