--- a/docs/src/components/testimonial.astro
+++ b/docs/src/components/testimonial.astro
@@ -17,7 +17,7 @@ const { content, name, handle, avatar, date, link, dir, lang } = Astro.props;
 
 // The current page's slug.
 const slug = Astro.url.pathname.replace(/^\//, '').replace(/\/$/, '');
-const pageDir = slugToLocaleData(slug).dir;
+const locale = slugToLocaleData(slug);
 ---
 
 <li class="testimonial">
@@ -38,12 +38,8 @@ const pageDir = slugToLocaleData(slug).dir;
 			}
 		</div>
 	</div>
-	<div class="testimonial-body" dir={dir ?? pageDir}>
-		{
-			content ? (
-				<blockquote lang={lang ?? pageDir} cite={link ? link.toString() : ''} set:html={content} />
-			) : null
-		}
+	<div class="testimonial-body" dir={dir ?? locale.dir} lang={lang ?? locale.lang}>
+		{content ? <blockquote cite={link ? link.toString() : ''} set:html={content} /> : null}
 		<slot />
 	</div>
 	{
