--- a/packages/starlight/indexSSR.astro
+++ b/packages/starlight/indexSSR.astro
@@ -8,6 +8,11 @@ import Page from './components/Page.astro';
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const route = getRouteBySlugParam(Astro.param.slug);
+
+if (route === undefined) {
+  return new Response(null, {status: 404});
+}
+
 const { Content, headings } = await route.entry.render();
 const routeData = generateRouteData({ props: { ...route, headings }, url: Astro.url });
 ---
