--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -77,4 +77,5 @@ import FluidGrid from './fluid-grid.astro';
 	/>
 	<Card title="Knip" href="https://knip.dev" thumbnail="knip.dev.png" />
 	<Card title="secco" href="https://secco.lekoarts.de" thumbnail="secco.lekoarts.de.png" />
+	<Card title="SiteOne Crawler" href="https://crawler.siteone.io/?utm_source=starlight-docs" thumbnail="crawler.siteone.io.png" />
 </FluidGrid>
