--- a/packages/starlight/user-components/FileTree.astro
+++ b/packages/starlight/user-components/FileTree.astro
@@ -52,7 +52,8 @@ const html = processFileTree(fileTreeHtml, 'Directory');
 			color: var(--sl-color-gray-3);
 		}
 
-		&:hover {
+		&:hover,
+		&:hover :global(.tree-icon) {
 			cursor: pointer;
 			color: var(--sl-color-text-accent);
 			fill: var(--sl-color-text-accent);
@@ -60,6 +61,10 @@ const html = processFileTree(fileTreeHtml, 'Directory');
 			& ~ :global(ul) {
 				border-color: var(--sl-color-gray-4);
 			}
+		}
+
+		&:hover :global(.highlight .tree-icon) {
+			fill: var(--sl-color-text-invert);
 		}
 	}
 
@@ -104,10 +109,36 @@ const html = processFileTree(fileTreeHtml, 'Directory');
 		}
 	}
 
+	file-treeeeeeeee :global(.empty) {
+		color: var(--sl-color-gray-3);
+		padding-inline-start: 0.375rem;
+	}
+
 	file-treeeeeeeee :global(.comment) {
 		color: var(--sl-color-gray-3);
 		padding-inline-start: 1.625rem;
 		max-width: 24rem;
 		min-width: 12rem;
+	}
+
+	file-treeeeeeeee :global(.highlight) {
+		display: inline-block;
+		border-radius: 0.25rem;
+		padding-inline-end: 0.5rem;
+		color: var(--sl-color-text-invert);
+		background-color: var(--sl-color-text-accent);
+	}
+
+	file-treeeeeeeee :global(svg) {
+		display: inline;
+		fill: var(--sl-color-gray-3);
+		vertical-align: middle;
+		margin-inline: 0.125rem 0.5rem;
+		width: 0.75rem;
+		height: 0.75rem;
+	}
+
+	file-treeeeeeeee :global(.highlight svg.tree-icon) {
+		fill: var(--sl-color-text-invert);
 	}
 </style>
