--- a/docs/src/components/testimonial.astro
+++ b/docs/src/components/testimonial.astro
@@ -7,13 +7,12 @@ interface Props {
 	name: string;
 	content?: string;
 	avatar?: string;
-	date?: Date;
 	link?: URL;
 	dir?: 'rtl' | 'ltr';
 	lang?: string;
 }
 
-const { content, name, handle, avatar, date, link, dir, lang } = Astro.props;
+const { content, name, handle, avatar, link, dir, lang } = Astro.props;
 
 // The current page's slug.
 const slug = Astro.url.pathname.replace(/^\//, '').replace(/\/$/, '');
@@ -21,6 +20,10 @@ const locale = slugToLocaleData(slug);
 ---
 
 <li class="testimonial">
+	<div class="testimonial-body" dir={dir ?? locale.dir} lang={lang ?? locale.lang}>
+		{content ? <blockquote cite={link ? link.toString() : ''} set:html={content} /> : null}
+		<slot />
+	</div>
 	<div class="testimonial-heading">
 		{avatar ? <Image class="avatar" height="50" width="50" src={avatar} alt="image" /> : null}
 		<div class="testimonial-title">
@@ -38,17 +41,6 @@ const locale = slugToLocaleData(slug);
 			}
 		</div>
 	</div>
-	<div class="testimonial-body" dir={dir ?? locale.dir} lang={lang ?? locale.lang}>
-		{content ? <blockquote cite={link ? link.toString() : ''} set:html={content} /> : null}
-		<slot />
-	</div>
-	{
-		date ? (
-			<div class="testimonial-date">
-				posted on <time datetime={date.toISOString()}>{date.toLocaleDateString()}</time>
-			</div>
-		) : null
-	}
 </li>
 
 <style>
@@ -75,23 +67,15 @@ const locale = slugToLocaleData(slug);
 	}
 	.handle {
 		gap: 0.1rem;
-		color: var(--sl-color-gray);
+		color: var(--sl-color-blue);
+		font-family: 'inter', sans-serif;
+		font-size: var(--sl-text-base);
+		text-underline-offset: 4px;
 	}
 	.testimonial {
-		--sl-card-border: var(--sl-color-purple);
-		--sl-card-bg: var(--sl-color-purple-low);
-		border: 1px solid var(--sl-color-gray-5);
-		background-color: var(--sl-color-black);
-		padding: clamp(1rem, calc(0.125rem + 3vw), 2.5rem);
 		flex-direction: column;
 		gap: clamp(0.5rem, calc(0.125rem + 1vw), 1rem);
 	}
-	/* .testimonial .icon {
-		border: 1px solid var(--sl-card-border);
-		background-color: var(--sl-card-bg);
-		padding: 0.2em;
-		border-radius: 0.25rem;
-	} */
 	.testimonial-body {
 		margin-bottom: 0 !important;
 		display: flex;
