--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -4,6 +4,11 @@ import FluidGrid from './fluid-grid.astro';
 ---
 
 <FluidGrid>
+	<Card
+		title="Concepto AI"
+		href="https://concepto-docs.vercel.app"
+		thumbnail="concepto-docs.vercel.app.png"
+	/>
 	<Card title="Athena OS" href="https://athenaos.org" thumbnail="www.athenaos.org.png" />
 	<Card
 		title="PubIndexAPI Docs"
