--- a/packages/starlight/user-components/FileTree.astro
+++ b/packages/starlight/user-components/FileTree.astro
@@ -8,14 +8,12 @@ const t = useTranslations(slugToLocaleData(slug).locale);
 
 const fileTreeHtml = await Astro.slots.render('default');
 const html = processFileTree(fileTreeHtml, t('fileTree.directory'));
-
-// TODO(HiDeoo) rename component
 ---
 
-<file-treeeeeeeee set:html={html} class="not-content" data-pagefind-ignore />
+<starlight-file-tree set:html={html} class="not-content" data-pagefind-ignore />
 
 <style>
-	file-treeeeeeeee {
+	starlight-file-tree {
 		--x-space: 1.5rem;
 		--y-space: 0.125rem;
 		--y-pad: 0;
@@ -29,14 +27,14 @@ const html = processFileTree(fileTreeHtml, t('fileTree.directory'));
 		overflow-x: auto;
 	}
 
-	file-treeeeeeeee :global(.directory > details) {
+	starlight-file-tree :global(.directory > details) {
 		border: 0;
 		padding: 0;
 		padding-inline-start: var(--x-space);
 		background: transparent;
 	}
 
-	file-treeeeeeeee :global(.directory > details > summary) {
+	starlight-file-tree :global(.directory > details > summary) {
 		margin-inline-start: calc(-1 * var(--x-space));
 		border: 0;
 		padding: var(--y-pad) 0.625rem;
@@ -65,7 +63,7 @@ const html = processFileTree(fileTreeHtml, t('fileTree.directory'));
 		}
 	}
 
-	file-treeeeeeeee :global(ul) {
+	starlight-file-tree :global(ul) {
 		margin-inline-start: 0.5rem;
 		border-inline-start: 1px solid var(--sl-color-gray-5);
 		padding: 0;
@@ -73,23 +71,23 @@ const html = processFileTree(fileTreeHtml, t('fileTree.directory'));
 		list-style: none;
 	}
 
-	file-treeeeeeeee > :global(ul) {
+	starlight-file-tree > :global(ul) {
 		margin: 0;
 		border: 0;
 		padding: 0;
 	}
 
-	file-treeeeeeeee :global(li) {
+	starlight-file-tree :global(li) {
 		margin: var(--y-space) 0;
 		padding: var(--y-pad) 0;
 	}
 
-	file-treeeeeeeee :global(.file) {
+	starlight-file-tree :global(.file) {
 		margin-inline-start: calc(var(--x-space) - 0.125rem);
 		color: var(--sl-color-white);
 	}
 
-	file-treeeeeeeee :global(.tree-entry) {
+	starlight-file-tree :global(.tree-entry) {
 		display: inline-flex;
 		align-items: flex-start;
 		flex-wrap: wrap;
@@ -106,19 +104,19 @@ const html = processFileTree(fileTreeHtml, t('fileTree.directory'));
 		}
 	}
 
-	file-treeeeeeeee :global(.empty) {
+	starlight-file-tree :global(.empty) {
 		color: var(--sl-color-gray-3);
 		padding-inline-start: 0.375rem;
 	}
 
-	file-treeeeeeeee :global(.comment) {
+	starlight-file-tree :global(.comment) {
 		color: var(--sl-color-gray-3);
 		padding-inline-start: 1.625rem;
 		max-width: 24rem;
 		min-width: 12rem;
 	}
 
-	file-treeeeeeeee :global(.highlight) {
+	starlight-file-tree :global(.highlight) {
 		display: inline-block;
 		border-radius: 0.25rem;
 		padding-inline-end: 0.5rem;
@@ -126,7 +124,7 @@ const html = processFileTree(fileTreeHtml, t('fileTree.directory'));
 		background-color: var(--sl-color-text-accent);
 	}
 
-	file-treeeeeeeee :global(svg) {
+	starlight-file-tree :global(svg) {
 		display: inline;
 		fill: var(--sl-color-gray-3);
 		vertical-align: middle;
@@ -135,7 +133,7 @@ const html = processFileTree(fileTreeHtml, t('fileTree.directory'));
 		height: 0.875rem;
 	}
 
-	file-treeeeeeeee :global(.highlight svg.tree-icon) {
+	starlight-file-tree :global(.highlight svg.tree-icon) {
 		fill: var(--sl-color-text-invert);
 	}
 </style>
