showcase: Add doc link of Mr. Robøt

--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -83,4 +83,5 @@ import FluidGrid from './fluid-grid.astro';
 		thumbnail="crawler.siteone.io.png"
 	/>
 	<Card title="csmos" href="https://csmos.space" thumbnail="csmos.space.png" />
+	<Card title="Mr. Robøt" href="https://docs.mrrobot.app" thumbnail="docs.mrrobot.app.png" />
 </FluidGrid>
