Add Concepto AI to Showcase Docs list (#1307)
Co-authored-by: HiDeoo <494699+HiDeoo@users.noreply.github.com>

--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -88,4 +88,9 @@ import FluidGrid from './fluid-grid.astro';
 		href="https://docs.ghostfam.com/"
 		thumbnail="docs.ghostfam.com.png"
 	/>
+	<Card
+		title="Concepto AI"
+		href="https://concepto-docs.vercel.app"
+		thumbnail="concepto-docs.vercel.app.png"
+	/>
 </FluidGrid>
