showcase: Add doc link of Mr. Robøt (#1312)

--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -93,4 +93,5 @@ import FluidGrid from './fluid-grid.astro';
 		href="https://concepto-docs.vercel.app"
 		thumbnail="concepto-docs.vercel.app.png"
 	/>
+  <Card title="Mr. Robøt" href="https://docs.mrrobot.app" thumbnail="docs.mrrobot.app.png" />
 </FluidGrid>
