--- a/packages/virtual-pages-demo/Route.astro
+++ b/packages/virtual-pages-demo/Route.astro
@@ -45,8 +45,9 @@ function getVirtualPageProps(): VirtualPageProps {
 		// Page with minimal set of props.
 		return { slug, title };
 	} else if (isThingE) {
-		// Page with the `splash` template and a hero including an image.
+		// Page with the `splash` template, a hero including an image and a banner.
 		return {
+			banner: { content: 'This is a banner' },
 			hero: {
 				title: 'Hello',
 				tagline: 'This is a tagline',
